automate NPM publish through CodeBuild

--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -26,7 +26,7 @@
     "test": "node ./test.js",
     "copy-flow-typed": "cp -R ../../flow-typed .",
     "build": "../../node_modules/.bin/rollup -c && ../../node_modules/.bin/rollup -c --environment esm",
-    "prepublishOnly": "git clean -fdx && npm run copy-flow-typed && npm run build",
+    "prepublishOnly": "npm run copy-flow-typed && npm run build",
     "postpublish": "rm -r flow-typed dist/index.cjs"
   },
   "repository": {
