--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
     commands:
       - echo "//registry.npmjs.org/:_authToken=$NPMAccessToken" > ./.npmrc
       - npm whoami
+      - npm set unsafe-perm true
       - npm install -g yarn
       - yarn
   build:
