Automate NPM publish through CodeBuild (#11581)
* automate NPM publish through CodeBuild

* v2.8.0-alpha.2 + style-spec@13.24.0-alpha.4

* v2.8.0-alpha.3 + style-spec@13.24.0-alpha.5

* fix npm auth to be per-user instead of per-project

* v2.8.0-alpha.4 + style-spec@13.24.0-alpha.6

* avoid publishing already published versions on CodeBuild

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,15 @@
 version: 0.2
+
 phases:
+  install:
+    runtime-versions:
+      nodejs: 14
+    commands:
+      - echo "//registry.npmjs.org/:_authToken=$NPMAccessToken" > ~/.npmrc
+      - npm whoami
+      - npm set unsafe-perm true
+      - npm install -g yarn
+      - yarn
   build:
     commands:
-      - echo TODO
+      - ./build/publish.sh
