--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mapbox-gl",
   "description": "A WebGL interactive maps library",
-  "version": "2.8.0-dev",
+  "version": "2.8.0-alpha.4",
   "main": "dist/mapbox-gl.js",
   "style": "dist/mapbox-gl.css",
   "license": "SEE LICENSE IN LICENSE.txt",
@@ -73,13 +73,11 @@
     "is-builtin-module": "^3.0.0",
     "jsdom": "^13.2.0",
     "json-stringify-pretty-compact": "^2.0.0",
-    "list-npm-contents": "^1.0.2",
     "lodash.template": "^4.5.0",
     "mapbox-gl-styles": "^2.0.2",
     "mock-geolocation": "^1.0.11",
     "node-notifier": "^9.0.0",
     "npm-font-open-sans": "^1.1.0",
-    "npm-packlist": "^2.1.4",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pixelmatch": "^5.2.1",
@@ -129,8 +127,6 @@
     "start-debug": "run-p build-token watch-css watch-dev start-server",
     "start-bench": "run-p build-token watch-benchmarks start-server",
     "start-release": "run-s build-token build-prod-min build-css print-release-url start-server",
-    "diff-tarball": "build/run-node build/diff-tarball && echo \"Please confirm the above is correct [y/n]? \"; read answer; if [ \"$answer\" = \"${answer#[Yy]}\" ]; then false; fi",
-    "prepare-publish": "git clean -fdx && yarn install",
     "lint": "eslint --cache --ignore-path .gitignore src test bench debug/*.html",
     "lint-css": "stylelint 'src/css/mapbox-gl.css'",
     "test": "run-s lint lint-css test-flow test-unit",
@@ -148,7 +144,7 @@
     "test-flow": "build/run-node build/generate-flow-typed-style-spec && flow .",
     "test-cov": "nyc --require=@mapbox/flow-remove-types/register --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
     "test-style-spec": "cd src/style-spec && npm test",
-    "prepublishOnly": "run-s prepare-publish build-flow-types build-dev build-prod-min build-prod build-csp build-css build-style-spec test-build diff-tarball",
+    "prepublishOnly": "run-s build-flow-types build-dev build-prod-min build-prod build-csp build-css build-style-spec",
     "print-release-url": "node build/print-release-url.js",
     "codegen": "build/run-node build/generate-style-code.js && build/run-node build/generate-struct-arrays.js"
   },
