--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ test/integration/**/test-results.xml
 test/integration/dist/**/*.js
 test/integration/dist/**/*.json
 .eslintcache
-src/style-spec/dist/index.cjs
+src/style-spec/dist/
 _batfish_site
 _batfish_tmp
 _site
