--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mapbox/mapbox-gl-style-spec",
   "description": "a specification for mapbox gl styles",
-  "version": "13.24.0-alpha.6",
+  "version": "13.25.0-dev",
   "author": "Mapbox",
   "keywords": [
     "mapbox",
