--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "@mapbox/geojson-rewind": "^0.5.1",
     "@mapbox/geojson-types": "^1.0.2",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
-    "@mapbox/mapbox-gl-supported": "^2.0.0",
+    "@mapbox/mapbox-gl-supported": "^2.0.1",
     "@mapbox/point-geometry": "^0.1.0",
-    "@mapbox/tiny-sdf": "^2.0.2",
+    "@mapbox/tiny-sdf": "^2.0.5",
     "@mapbox/unitbezier": "^0.0.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@mapbox/whoots-js": "^3.1.0",
     "csscolorparser": "~1.0.3",
     "earcut": "^2.2.3",
     "geojson-vt": "^3.2.1",
-    "gl-matrix": "^3.3.0",
+    "gl-matrix": "^3.4.3",
     "grid-index": "^1.1.0",
-    "minimist": "^1.2.5",
+    "minimist": "^1.2.6",
     "murmurhash-js": "^1.0.0",
     "pbf": "^3.2.1",
-    "potpack": "^1.0.1",
+    "potpack": "^1.0.2",
     "quickselect": "^2.0.0",
     "rw": "^1.3.3",
     "supercluster": "^7.1.4",
@@ -36,26 +36,26 @@
     "vt-pbf": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@babel/preset-flow": "^7.12.13",
+    "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-flow": "^7.16.7",
     "@mapbox/flow-remove-types": "^2.0.0",
     "@mapbox/gazetteer": "^4.0.4",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.3",
-    "@mapbox/mvt-fixtures": "^3.6.0",
+    "@mapbox/mvt-fixtures": "^3.8.0",
     "@octokit/auth-app": "^2.11.0",
-    "@octokit/rest": "^18.1.1",
+    "@octokit/rest": "^18.12.0",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-replace": "^2.3.4",
-    "@rollup/plugin-strip": "^2.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.4.2",
+    "@rollup/plugin-strip": "^2.1.0",
     "address": "^1.1.2",
     "browserify": "^17.0.0",
-    "chalk": "^4.1.0",
-    "chokidar": "^3.5.1",
-    "cssnano": "^4.1.10",
-    "d3": "^6.5.0",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
+    "cssnano": "^4.1.11",
+    "d3": "^6.7.0",
     "d3-queue": "^3.0.7",
     "diff": "^5.0.0",
     "documentation": "~13.1.1",
@@ -68,39 +68,39 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^32.3.4",
     "flow-bin": "0.142.0",
-    "gl": "^4.9.0",
-    "glob": "^7.1.6",
-    "is-builtin-module": "^3.0.0",
+    "gl": "^4.9.2",
+    "glob": "^7.2.0",
+    "is-builtin-module": "^3.1.0",
     "jsdom": "^13.2.0",
     "json-stringify-pretty-compact": "^2.0.0",
     "lodash.template": "^4.5.0",
     "mapbox-gl-styles": "^2.0.2",
     "mock-geolocation": "^1.0.11",
-    "node-notifier": "^9.0.0",
+    "node-notifier": "^9.0.1",
     "npm-font-open-sans": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "pixelmatch": "^5.2.1",
-    "postcss": "^8.2.6",
+    "postcss": "^8.4.12",
     "postcss-cli": "^8.3.1",
     "postcss-inline-svg": "^5.0.0",
-    "pretty-bytes": "^5.5.0",
+    "pretty-bytes": "^5.6.0",
     "puppeteer-core": "^11.0.0",
     "qrcode-terminal": "^0.12.0",
-    "rollup": "^2.39.0",
+    "rollup": "^2.70.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
-    "selenium-webdriver": "^4.0.0-alpha.8",
+    "selenium-webdriver": "^4.1.1",
     "shuffle-seed": "^1.1.6",
     "sinon": "^9.2.4",
     "st": "^2.0.0",
-    "stylelint": "^13.10.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-standard": "^20.0.0",
     "tap": "~12.4.1",
-    "tape": "^5.1.1",
+    "tape": "^5.5.2",
     "tape-filter": "^1.0.4",
-    "testem": "^3.2.0"
+    "testem": "^3.6.0"
   },
   "browser": {
     "./src/shaders/index.js": "./src/shaders/shaders.js",
