--- a/.stylelintrc
+++ b/.stylelintrc
@@ -8,6 +8,15 @@
     "selector-class-pattern": "mapboxgl-[a-z-]+",
     "at-rule-no-unknown": [true, {
       "ignoreAtRules": ["svg-load"]
+    }],
+    "function-no-unknown": [true, {
+      "ignoreFunctions": ["svg-load", "svg-inline"]
+    }],
+    "selector-no-vendor-prefix": [true, {
+      "ignoreSelectors": [":-webkit-full-screen"]
+    }],
+    "property-no-vendor-prefix": [true, {
+      "ignoreProperties": ["user-select"]
     }]
   }
 }
