add unlabeled type in case  is removed before merging

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,7 +2,7 @@ name: Github Actions
 
 on:
   pull_request:
-    types: [opened, reopened, edited, labeled]
+    types: [opened, reopened, edited, labeled, unlabeled]
 
 jobs:
   check-pr-requirements:
