renamed files for better clarity

--- a/.github/actions/check-changelog/action.yml
+++ b/.github/actions/check-changelog/action.yml
@@ -1,5 +1,5 @@
-name: 'Check PR Requirements'
-description: 'Ensure PR meets requirements'
+name: 'Check Changelog'
+description: 'Ensure changelog meets requirements'
 inputs:
   pr-body:
     description: 'PR body from the github event'
