--- a/.github/workflows/pull-request-requirements.yml
+++ b/.github/workflows/pull-request-requirements.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 14.x
       - name: Install dependencies
-        run: npm install --prefix ./.github/actions
+        run: yarn install --cwd ./.github/actions
       - name: Check if changelog entry exists
         uses: ./.github/actions/check-changelog #uses action in .github/actions
         id: check-changelog
