add synchronize to types

--- a/.github/workflows/pull-request-requirements.yml
+++ b/.github/workflows/pull-request-requirements.yml
@@ -2,6 +2,7 @@ name: Check PR Requirements
 
 on:
   pull_request:
+    types: [opened, reopened, edited, labeled, unlabeled, synchronize]
 
 jobs:
   check-changelog:
