--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "geojson-vt": "^3.2.1",
     "gl-matrix": "^3.2.1",
     "grid-index": "^1.1.0",
-    "minimist": "^1.2.5",
+    "minimist": "^1.2.6",
     "murmurhash-js": "^1.0.0",
     "pbf": "^3.2.1",
     "potpack": "^1.0.1",
@@ -38,7 +38,8 @@
     "rw": "^1.3.3",
     "supercluster": "^7.0.0",
     "tinyqueue": "^2.0.3",
-    "vt-pbf": "^3.1.1"
+    "vt-pbf": "^3.1.1",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
