--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - test-render:
+      - test-render-ci:
           requires:
             - prepare
           filters:
@@ -119,7 +119,7 @@ workflows:
             - build
             - test-flow
             - test-unit
-            - test-render
+            - test-render-ci
             - test-render-prod
             - test-query
             - test-expressions
@@ -137,7 +137,7 @@ workflows:
             - build
             - test-flow
             - test-unit
-            - test-render
+            - test-render-ci
             - test-render-prod
             - test-query
             - test-expressions
@@ -253,13 +253,13 @@ jobs:
           at: ~/
       - run: yarn run test-unit
 
-  test-render:
+  test-render-ci:
     <<: *defaults
     steps:
       - attach_workspace:
           at: ~/
       - browser-tools/install-chrome
-      - run: yarn run test-render
+      - run: yarn run test-render-ci
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
