--- a/package.json
+++ b/package.json
@@ -138,9 +138,9 @@
     "watch-render": "SUITE_NAME=render testem -f test/integration/testem/testem.js",
     "watch-query": "SUITE_NAME=query testem -f test/integration/testem/testem.js",
     "test-render": "SUITE_NAME=render LAUNCH=true CI=${CI} testem ci -f test/integration/testem/testem.js",
-    "test-render-prod": "BUILD=production SUITE_NAME=render LAUNCH=true CI testem ci -f test/integration/testem/testem.js",
-    "test-render-csp": "BUILD=csp SUITE_NAME=render LAUNCH=true CI testem ci -f test/integration/testem/testem.js",
-    "test-query": "SUITE_NAME=query LAUNCH=true CI testem ci -f test/integration/testem/testem.js",
+    "test-render-prod": "BUILD=production SUITE_NAME=render LAUNCH=true CI=${CI} testem ci -f test/integration/testem/testem.js",
+    "test-render-csp": "BUILD=csp SUITE_NAME=render LAUNCH=true CI=${CI} testem ci -f test/integration/testem/testem.js",
+    "test-query": "SUITE_NAME=query LAUNCH=true CI=${CI} testem ci -f test/integration/testem/testem.js",
     "test-expressions": "build/run-node test/expression.test.js",
     "test-flow": "build/run-node build/generate-flow-typed-style-spec && flow .",
     "test-cov": "nyc --require=@mapbox/flow-remove-types/register --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
