--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -259,12 +259,7 @@ jobs:
       - attach_workspace:
           at: ~/
       - browser-tools/install-chrome
-      - run:
-          environment:
-            CI: ${CI}
-          command: |
-            echo $CI
-            yarn run test-render
+      - run: CI=$CI yarn run test-render
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
@@ -276,10 +271,7 @@ jobs:
       - attach_workspace:
           at: ~/
       - browser-tools/install-chrome
-      - run:
-          environment:
-            CI: ${CI}
-          command: yarn run test-render-prod
+      - run: yarn run test-render-prod
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
@@ -291,10 +283,7 @@ jobs:
       - attach_workspace:
           at: ~/
       - browser-tools/install-chrome
-      - run:
-          environment:
-            CI: ${CI}
-          command: yarn run test-render-csp
+      - run: yarn run test-render-csp
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
@@ -306,10 +295,7 @@ jobs:
       - attach_workspace:
           at: ~/
       - browser-tools/install-chrome
-      - run:
-          environment:
-            CI: ${CI}
-          command: yarn run test-query
+      - run: yarn run test-query
       - store_test_results:
           path: test/integration/query-tests
       - store_artifacts:
