--- a/package.json
+++ b/package.json
@@ -137,10 +137,10 @@
     "test-browser": "build/run-tap --reporter spec --no-coverage test/browser/**/*.test.js",
     "watch-render": "SUITE_NAME=render testem -f test/integration/testem/testem.js",
     "watch-query": "SUITE_NAME=query testem -f test/integration/testem/testem.js",
-    "test-render": "SUITE_NAME=render CI=true testem ci -f test/integration/testem/testem.js",
-    "test-render-prod": "BUILD=production SUITE_NAME=render CI=true testem ci -f test/integration/testem/testem.js",
-    "test-render-csp": "BUILD=csp SUITE_NAME=render CI=true testem ci -f test/integration/testem/testem.js",
-    "test-query": "SUITE_NAME=query CI=true testem ci -f test/integration/testem/testem.js",
+    "test-render": "SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
+    "test-render-prod": "BUILD=production SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
+    "test-render-csp": "BUILD=csp SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
+    "test-query": "SUITE_NAME=query RENDER=true testem ci -f test/integration/testem/testem.js",
     "test-expressions": "build/run-node test/expression.test.js",
     "test-flow": "build/run-node build/generate-flow-typed-style-spec && flow .",
     "test-cov": "nyc --require=@mapbox/flow-remove-types/register --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
