fix test-browser and ugprade selenium-webdriver

--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
-    "selenium-webdriver": "^4.1.1",
+    "selenium-webdriver": "^4.4.0",
     "shuffle-seed": "^1.1.6",
     "sinon": "^9.2.4",
     "st": "^2.0.0",
@@ -134,7 +134,7 @@
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "build/run-tap --reporter classic --no-coverage test/unit",
     "test-build": "build/run-tap --no-coverage test/build/**/*.test.js",
-    "test-browser": "build/run-tap --reporter spec --no-coverage test/browser/**/*.test.js",
+    "test-browser": "build/run-tap --jobs=1 --reporter spec --no-coverage -- test/browser/**/*.test.js",
     "watch-render": "SUITE_NAME=render testem -f test/integration/testem/testem.js",
     "watch-query": "SUITE_NAME=query testem -f test/integration/testem/testem.js",
     "test-render": "SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
