Upgrade Tap to v16 (and other unit test deps) (#12183)
* upgrade Tap to v16

* fix lint

* fix test-browser and ugprade selenium-webdriver

* fix test-browser in Firefox

* upgrade more test deps

* bump gl dep back for now

--- a/package.json
+++ b/package.json
@@ -49,14 +49,14 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-strip": "^2.1.0",
-    "address": "^1.1.2",
+    "address": "^1.2.0",
     "browserify": "^17.0.0",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "cssnano": "^4.1.11",
     "d3": "^6.7.0",
     "d3-queue": "^3.0.7",
-    "diff": "^5.0.0",
+    "diff": "^5.1.0",
     "documentation": "~13.1.1",
     "ejs": "^3.1.6",
     "envify": "^4.1.0",
@@ -85,22 +85,22 @@
     "postcss-cli": "^8.3.1",
     "postcss-inline-svg": "^5.0.0",
     "pretty-bytes": "^5.6.0",
-    "puppeteer-core": "^11.0.0",
+    "puppeteer-core": "^16.2.0",
     "qrcode-terminal": "^0.12.0",
     "rollup": "^2.70.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
-    "selenium-webdriver": "^4.1.1",
+    "selenium-webdriver": "^4.4.0",
     "shuffle-seed": "^1.1.6",
-    "sinon": "^9.2.4",
+    "sinon": "^14.0.0",
     "st": "^2.0.0",
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0",
-    "tap": "~12.4.1",
-    "tape": "^5.5.2",
+    "tap": "~16.3.0",
+    "tape": "^5.6.0",
     "tape-filter": "^1.0.4",
-    "testem": "^3.6.0"
+    "testem": "^3.8.0"
   },
   "browser": {
     "./src/shaders/index.js": "./src/shaders/shaders.js",
@@ -134,7 +134,7 @@
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "build/run-tap --reporter classic --no-coverage test/unit",
     "test-build": "build/run-tap --no-coverage test/build/**/*.test.js",
-    "test-browser": "build/run-tap --reporter spec --no-coverage test/browser/**/*.test.js",
+    "test-browser": "build/run-tap --jobs=1 --reporter spec --no-coverage -- test/browser/**/*.test.js",
     "watch-render": "SUITE_NAME=render testem -f test/integration/testem/testem.js",
     "watch-query": "SUITE_NAME=query testem -f test/integration/testem/testem.js",
     "test-render": "SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
