--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mapbox/geojson-rewind": "^0.5.2",
     "@mapbox/geojson-types": "^1.0.2",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
+    "@mapbox/mapbox-gl-styles": "^2.1.1",
     "@mapbox/mapbox-gl-supported": "^2.0.1",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/tiny-sdf": "^2.0.5",
@@ -39,9 +40,7 @@
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-flow": "^7.18.6",
     "@mapbox/flow-remove-types": "^2.0.0",
-    "@mapbox/mapbox-gl-rtl-text": "^0.2.3",
     "@mapbox/mvt-fixtures": "^3.10.0",
-    "@octokit/auth-app": "^4.0.5",
     "@octokit/rest": "^19.0.4",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
@@ -61,18 +60,17 @@
     "envify": "^4.1.0",
     "eslint": "^7.32.0",
     "eslint-config-mourner": "^3.0.0",
-    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-flowtype": "^7.0.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsdoc": "^39.3.6",
     "flow-bin": "0.142.0",
-    "gl": "4.9.0",
+    "gl": "5.0.3",
     "glob": "^8.0.3",
     "is-builtin-module": "^3.2.0",
     "jsdom": "^14.1.0",
     "json-stringify-pretty-compact": "^4.0.0",
     "lodash.template": "^4.5.0",
-    "mapbox-gl-styles": "^2.0.2",
     "minimist": "^1.2.6",
     "mock-geolocation": "^1.0.11",
     "node-notifier": "^10.0.1",
@@ -84,7 +82,7 @@
     "postcss-cli": "^10.0.0",
     "postcss-inline-svg": "^5.0.0",
     "pretty-bytes": "^6.0.0",
-    "puppeteer-core": "^16.2.0",
+    "puppeteer-core": "^17.0.0",
     "qrcode-terminal": "^0.12.0",
     "rollup": "^2.78.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
@@ -99,7 +97,7 @@
     "tap": "~16.3.0",
     "tape": "^5.6.0",
     "tape-filter": "^1.0.4",
-    "testem": "^3.8.0"
+    "testem": "^3.9.0"
   },
   "browser": {
     "./src/shaders/index.js": "./src/shaders/shaders.js",
