revert mapbox-gl-styles bump for now

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@mapbox/geojson-rewind": "^0.5.2",
     "@mapbox/geojson-types": "^1.0.2",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
-    "@mapbox/mapbox-gl-styles": "^2.1.1",
     "@mapbox/mapbox-gl-supported": "^2.0.1",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/tiny-sdf": "^2.0.5",
@@ -71,6 +70,7 @@
     "jsdom": "^14.1.0",
     "json-stringify-pretty-compact": "^4.0.0",
     "lodash.template": "^4.5.0",
+    "mapbox-gl-styles": "^2.0.2",
     "minimist": "^1.2.6",
     "mock-geolocation": "^1.0.11",
     "node-notifier": "^10.0.1",
