--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@1.4.0
   browser-tools: circleci/browser-tools@1.2.3
+  win: circleci/windows@4.1.1
 
 workflows:
   version: 2
@@ -56,6 +57,18 @@ workflows:
             tags:
               only: /.*/
       - test-render:
+          requires:
+            - prepare
+          filters:
+            tags:
+              only: /.*/
+      - build-windows:
+          requires:
+            - prepare
+          filters:
+            tags:
+              only: /.*/
+      - test-render-windows:
           requires:
             - prepare
           filters:
@@ -284,6 +297,47 @@ jobs:
           at: ~/
       - browser-tools/install-chrome
       - run: yarn run test-render-csp
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
+
+  build-windows:
+    executor:
+      name: win/default
+    working_directory: ~/mapbox-gl-js
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: pwsh -c "Write-Host Running build-windows"
+      - run: yarn install --immutable --immutable-cache --check-cache
+      - run: yarn run build-prod-min
+      - run: yarn run build-prod
+      - run: yarn run build-csp
+      - run: yarn run build-dev
+      - run: yarn run build-css
+      - run: yarn run build-style-spec
+      - run: yarn run build-flow-types
+      - run: yarn run test-build
+      - run: while read l; do cp debug/$l test/release/$l; done < test/release/local_release_page_list.txt
+      - store_artifacts:
+          path: "dist"
+      - store_artifacts:
+          path: "test/release"
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - mapbox-gl-js/dist
+
+  test-render-windows:
+    executor:
+      name: win/default
+    working_directory: ~/mapbox-gl-js
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: pwsh -c "Write-Host Running test-render-windows"
+      - run: yarn run test-render
       - store_test_results:
           path: test/integration/render-tests
       - store_artifacts:
