--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "browserify": "^17.0.0",
     "chalk": "^5.0.1",
     "chokidar": "^3.5.3",
+    "cross-env": "^7.0.3",
     "cssnano": "^5.1.13",
     "d3": "^7.6.1",
     "d3-queue": "^3.0.7",
@@ -132,9 +133,9 @@
     "test-unit": "build/run-tap --reporter classic --no-coverage test/unit",
     "test-build": "build/run-tap --no-coverage test/build/**/*.test.js",
     "test-browser": "build/run-tap --jobs=1 --reporter spec --no-coverage -- test/browser/**/*.test.js",
-    "watch-render": "SUITE_NAME=render testem -f test/integration/testem/testem.js",
+    "watch-render": "cross-env SUITE_NAME=render testem -f test/integration/testem/testem.js",
     "watch-query": "SUITE_NAME=query testem -f test/integration/testem/testem.js",
-    "test-render": "SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
+    "test-render": "cross-env SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
     "test-render-prod": "BUILD=production SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
     "test-render-csp": "BUILD=csp SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
     "test-query": "SUITE_NAME=query RENDER=true testem ci -f test/integration/testem/testem.js",
