--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,13 +64,13 @@ workflows:
               only: /.*/
       - build-windows:
           requires:
-            - prepare
+            - prepare-windows
           filters:
             tags:
               only: /.*/
       - test-render-windows:
           requires:
-            - prepare
+            - prepare-windows
           filters:
             tags:
               only: /.*/
@@ -302,47 +302,6 @@ jobs:
       - store_artifacts:
           path: "test/integration/render-tests/index.html"
 
-  build-windows:
-    executor:
-      name: win/default
-    working_directory: ~/mapbox-gl-js
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run: pwsh -c "Write-Host Running build-windows"
-      - run: yarn install --immutable --immutable-cache --check-cache
-      - run: yarn run build-prod-min
-      - run: yarn run build-prod
-      - run: yarn run build-csp
-      - run: yarn run build-dev
-      - run: yarn run build-css
-      - run: yarn run build-style-spec
-      - run: yarn run build-flow-types
-      - run: yarn run test-build
-      - run: while read l; do cp debug/$l test/release/$l; done < test/release/local_release_page_list.txt
-      - store_artifacts:
-          path: "dist"
-      - store_artifacts:
-          path: "test/release"
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - mapbox-gl-js/dist
-
-  test-render-windows:
-    executor:
-      name: win/default
-    working_directory: ~/mapbox-gl-js
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run: pwsh -c "Write-Host Running test-render-windows"
-      - run: yarn run test-render
-      - store_test_results:
-          path: test/integration/render-tests
-      - store_artifacts:
-          path: "test/integration/render-tests/index.html"
-
   test-query:
     <<: *defaults
     steps:
@@ -455,3 +414,66 @@ jobs:
           name: Deploy release
           command: |
             bash ./build/upload.sh
+
+  prepare-windows:
+    executor:
+      name: win/default
+    working_directory: ~/mapbox-gl-js
+    steps:
+      - run: pwsh -c "Write-Host Running prepare-windows"
+      - checkout
+      - restore_cache:
+          keys:
+            - v4-yarn-{{ checksum "yarn.lock" }}
+      - run: yarn
+      - save_cache:
+          key: v4-yarn-{{ checksum "yarn.lock" }}
+          paths:
+            - '~/.yarn'
+            - 'node_modules'
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - mapbox-gl-js
+            - .ssh
+
+  build-windows:
+    executor:
+      name: win/default
+    working_directory: ~/mapbox-gl-js
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: pwsh -c "Write-Host Running build-windows"
+      - run: yarn install --immutable --immutable-cache --check-cache
+      - run: yarn run build-prod-min
+      - run: yarn run build-prod
+      - run: yarn run build-csp
+      - run: yarn run build-dev
+      - run: yarn run build-css
+      - run: yarn run build-style-spec
+      - run: yarn run build-flow-types
+      - run: yarn run test-build
+      - run: while read l; do cp debug/$l test/release/$l; done < test/release/local_release_page_list.txt
+      - store_artifacts:
+          path: "dist"
+      - store_artifacts:
+          path: "test/release"
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - mapbox-gl-js/dist
+
+  test-render-windows:
+    executor:
+      name: win/default
+    working_directory: ~/mapbox-gl-js
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run: pwsh -c "Write-Host Running test-render-windows"
+      - run: yarn run test-render
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
