--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,12 +66,6 @@ workflows:
           filters:
             tags:
               only: /.*/
-      - build-windows:
-          requires:
-            - prepare-windows
-          filters:
-            tags:
-              only: /.*/
       - test-render-windows:
           requires:
             - prepare-windows
@@ -429,6 +423,8 @@ jobs:
           keys:
             - v4-yarn-{{ checksum "yarn.lock" }}
       - run: yarn
+      # The browser-tools orb doesn't work on Windows, so we install chrome manually.
+      - run: (new-object System.Net.WebClient).DownloadFile('http://dl.google.com/chrome/install/375.126/chrome_installer.exe', 'c:/temp/chrome.exe');. c:/temp/chrome.exe /silent /install;rm c:/temp -rec
       - save_cache:
           key: v4-yarn-{{ checksum "yarn.lock" }}
           paths:
@@ -439,33 +435,6 @@ jobs:
           paths:
             - mapbox-gl-js
             - .ssh
-
-  build-windows:
-    executor:
-      name: win/default
-    working_directory: ~/mapbox-gl-js
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run: pwsh -c "Write-Host Running build-windows"
-      - run: yarn install --immutable --immutable-cache --check-cache
-      - run: yarn run build-prod-min
-      - run: yarn run build-prod
-      - run: yarn run build-csp
-      - run: yarn run build-dev
-      - run: yarn run build-css
-      - run: yarn run build-style-spec
-      - run: yarn run build-flow-types
-      - run: yarn run test-build
-      - run: while read l; do cp debug/$l test/release/$l; done < test/release/local_release_page_list.txt
-      - store_artifacts:
-          path: "dist"
-      - store_artifacts:
-          path: "test/release"
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - mapbox-gl-js/dist
 
   test-render-windows:
     executor:
