Add testing for firefox on Linux

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,10 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - test-render-linux-firefox:
+          filters:
+            tags:
+              only: /.*/
       - test-render-windows:
           filters:
             tags:
@@ -406,6 +410,18 @@ jobs:
           name: Deploy release
           command: |
             bash ./build/upload.sh
+
+  test-render-linux-firefox:
+    <<: *defaults
+    steps:
+      - attach_workspace:
+          at: ~/
+      - browser-tools/install-firefox
+      - run: yarn run test-render
+      - store_test_results:
+          path: test/integration/render-tests
+      - store_artifacts:
+          path: "test/integration/render-tests/index.html"
 
   test-render-windows:
     executor:
