--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "watch-render": "cross-env SUITE_NAME=render testem -f test/integration/testem/testem.js",
     "watch-query": "SUITE_NAME=query testem -f test/integration/testem/testem.js",
     "test-render": "cross-env SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
+    "test-render-firefox": "cross-env BROWSER=Firefox SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
     "test-render-prod": "BUILD=production SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
     "test-render-csp": "BUILD=csp SUITE_NAME=render RENDER=true testem ci -f test/integration/testem/testem.js",
     "test-query": "SUITE_NAME=query RENDER=true testem ci -f test/integration/testem/testem.js",
