--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -432,7 +432,7 @@ jobs:
 
   test-render-macos-chrome:
     macos:
-      xcode: 13.4.1
+      xcode: 14.0.1 # macOS version 12.5.1 (Monterey)
     working_directory: ~/mapbox-gl-js
     steps:
       - checkout
