Adding prepare as dependency to windows and macos tests
Co-authored-by: Karim Naaji <karim.naaji@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,10 +69,14 @@ workflows:
             tags:
               only: /.*/
       - test-render-macos-chrome:
+          requires:
+            - prepare
           filters:
             tags:
               only: /.*/
       - test-render-windows-chrome:
+          requires:
+            - prepare
           filters:
             tags:
               only: /.*/
